--- a/4-index.html
+++ b/4-index.html
@@ -18,7 +18,7 @@
       </ul>
     </nav>
     </header>
-    <main></main>
+    <main>
     <section>
       <img src="file:///Users/polinasi/Downloads/1%201%20(1).png" alt="woman" width="420px">
       <p style="font-style:italic"><small>LIFESTYLE</small></p>
