--- a/3-index.html
+++ b/3-index.html
@@ -1,5 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
+
+
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -28,6 +30,7 @@
       
     </header>
 
+<main>
     <section>
       <h2>Найпопулярніші жанри фільмів:</h2>
       <article>
@@ -161,6 +164,7 @@
           </ul>
         </article>
   </section>
+</main>
 
     <footer>
       <div>
