--- a/дз4/4-index.html
+++ b/дз4/4-index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Static Template</title>
+    
   </head>
   <body>
 
@@ -20,25 +21,25 @@
     </header>
     <main>
     <section>
-      <img src="file:///Users/polinasi/Downloads/1%201%20(1).png" alt="woman" width="420px">
-      <p style="font-style:italic"><small>LIFESTYLE</small></p>
+      <img src="/foto/1.png" alt="woman" width="420px">
+      <p class="text7">LIFESTYLE</p>
       <h3>More than just a music festival</h3>
       <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea.</p>
     </section>
     <section>
-      <img src="file:///Users/polinasi/Downloads/2%201.png" alt="coffe" width="420px">
+      <img src="/foto/2.png" alt="coffe" width="420px">
       <p style="font-style:italic"><small>LIFESTYLE</small></p>
       <h3>Life tastes better with coffee</h3>
       <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea.</p>
     </section>
     <section>
-      <img src="file:///Users/polinasi/Downloads/3%201.png" alt="coffe" width="420px">
+      <img src="/foto/3.png" alt="coffe" width="420px">
       <p style="font-style:italic"><small>PHOTODAIRY</small></p>
       <h3>American dream</h3>
       <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea.</p>
     </section>
     <section>
-      <img src="file:///Users/polinasi/Downloads/4%201.png" alt="people" width="420px">
+      <img src="/foto/4.png" alt="people" width="420px">
       <p style="font-style:italic"><small>PHOTODAIRY</small></p>
       <h3>A day exploring the Alps</h3>
       <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea.</p>
