--- a/index.html
+++ b/index.html
@@ -1,12 +1,143 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=>, initial-scale=1.0">
-    <title>Document</title>
+<meta charset="utf-8" />
+<title>Название сайта</title>
 </head>
 <body>
-    <p>stavlirt</p>
+>
+<table
+border="1"
+align="center"
+rules="rows"
+style="width:60%;">
+<!--Создаём строку-->
+<tr>
+<!--Создаём ячейку строки-->
+<td>
+<!--ШАПКА САЙТА-->
+
+
+<table
+
+background="images/168.png"
+back-ground color="#7FFFD4"
+cellpadding="10"
+style="width:100%; border-radius:5px;">
+<!--Создаём строку таблицы-->
+<tr>
+<!--Создаём столбец таблицы-->
+<th>
+<!--Содержание ячейки столбца-->
+<h1>Название</h1>
+<h3>Описание сайта</h3>
+<!--Закрываем таблицу-->
+</th>
+</tr>
+</table>
+
+<!--ОСНОВНОЙ КОНТЕНТ-->
+
+<!--В этой же ячейке контейнера создаём ещё одну таблицу
+для основного контента.
+Оформление как и в предыдущей таблице-->
+
+<table
+border="1"
+bgcolor="#e6e6fa"
+cellpadding="10"
+style="width:100%; border-radius:5px;">
+<!--Создаём строку-->
+<tr>
+<!--Создаём ячейку
+Оформление:
+rowspan="2" - объединяем две ячейки в одну.
+Число объединяемых ячеек по числу ячеек в сайдбаре.
+style="width:80%" - основной контент занимает 80% всей площади,
+оставшиеся 20% для сайдбара-->
+<td
+rowspan="2"
+style="width:80%">
+<h2>Страница</h2>
+<!--Начинаем абзац с красной строки-->
+<p style="text-indent:20px">
+Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel debitis fugiat unde molestiae 
+ipsam atque possimus voluptatem commodi corrupti dignissimos rerum reiciendis autem molestias
+ hic accusantium provident, nisi sed velit?</p>
+
+<p style="text-indent:20px">Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum officiis doloremque quas quod
+     nulla nemo sed dicta mollitia vero laboriosam sapiente, commodi, adipisci, iste totam! Eius, omnis sed, maxime iusto 
+     numquam nulla voluptas tempora quisquam corrupti aperiam reiciendis, beatae hic iste veritatis ad ducimus maiores ex quaerat
+      dolorum! Iure praesentium atque mollitia, cumque molestiae itaque dolores est eveniet
+     similique dolore omnis aliquid recusandae, repellendus consequuntur fugiat soluta quam quo porro.</p>
+<!--Закрываем ячейку-->
+</td>
+
+<!--САЙДБАР-->
+
+<!--Создаём ячейку сайдбара-->
+<td bgcolor="#e6e6fa">
+<h3>Меню</h3>
+<!--Абзац для ссылки на страницу сайта-->
+<p>
+<!--Ссылка на страницу сайта-->
+<a href="">
+<!--Картинка маркера перед названием страницы-->
+<img src="http://trueimages.ru/img/00/06/f4fffdb5.png">
+<!--Название страницы
+style="margin-left:5px;" - отступ названия от маркера-->
+<span style="margin-left:5px;">Страница</span></a>
+<!--Закрываем абзац-->
+</p>
+<p>
+<a href="">
+<img src="http://trueimages.ru/img/31/ab/4dcb087c2ae4305edcd15171696.jpg">
+<span style="margin-left:5px;">Страница 1</span;></a>
+</p>
+<p>
+<a href="">
+<img src="http://trueimages.ru/img/31/ab/4dcb087c2ae4305edcd15171696.jpg">
+<span style="margin-left:5px;">Страница 2</span></a>
+</p>
+<!--Закрываем строку Меню-->
+</td>
+</tr>
+<!--Создаём строку с дополнительной информацией-->
+<tr>
+<!--Ячейка с дополнительной информацией-->
+<td
+back-g color="#e6e6fa"
+a-lign="center">
+<h3>Общая информация</h3>
+<p>Текст</p>
+<!--Закрываем ячейку с общей информацией
+и таблицу основного контента-->
+</td>
+</tr>
+</table>
+
+<!--ПОДВАЛ-->
+
+<!--Создаём таблицу подвала-->
+<table
+
+background-color="red"
+height="100"
+cellpadding="10"
+style="width:100%; border-radius:5px;">
+<!--Создаём строку.-->
+<tr>
+<!--Создаём столбец-->
+<th>
+<h3>Подвал</h3>
+<!--Закрываем таблицу подвала. При желании в подвале можно
+сделать несколько строк и столбцов-->
+</th>
+</tr>
+</table>
+<!--Закрываем таблицу контейнера-->
+</td>
+</tr>
+</table>
 </body>
 </html>
