--- a/дз4/4-index.html
+++ b/дз4/4-index.html
@@ -5,44 +5,44 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Static Template</title>
-    <link rel="stylesheet" href="дз4/main.css">
+    <link rel="stylesheet" href="./main.css">
   </head>
   <body>
 
     <header>
-      <nav>
+      <nav class="text1">
       <ul>
-        <li>LIFESTYLE</li>
-        <li>PHOTODIARY</li>
-        <li>MUSIC</li>
-        <li>TRAVEL</li>
+        <li class="lifestyle">LIFESTYLE</li>
+        <li class="text2">PHOTODIARY</li>
+        <li class="text2">MUSIC</li>
+        <li class="text2">TRAVEL</li>
       </ul>
     </nav>
     </header>
     <main>
     <section>
       <img src="/foto/1.png" alt="woman" width="420px">
-      <p class="text7">LIFESTYLE</p>
+      <p class="p1">LIFESTYLE</p>
       <h3>More than just a music festival</h3>
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea.</p>
+      <p class="text3">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea.</p>
     </section>
     <section>
       <img src="/foto/2.png" alt="coffe" width="420px">
-      <p style="font-style:italic"><small>LIFESTYLE</small></p>
+      <p class="p1">LIFESTYLE</p>
       <h3>Life tastes better with coffee</h3>
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea.</p>
+      <p class="text3">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea.</p>
     </section>
     <section>
       <img src="/foto/3.png" alt="coffe" width="420px">
-      <p style="font-style:italic"><small>PHOTODAIRY</small></p>
+      <p class="p1">PHOTODAIRY</p>
       <h3>American dream</h3>
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea.</p>
+      <p class="text3">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea.</p>
     </section>
     <section>
       <img src="/foto/4.png" alt="people" width="420px">
-      <p style="font-style:italic"><small>PHOTODAIRY</small></p>
+      <p class="p1">PHOTODAIRY</p>
       <h3>A day exploring the Alps</h3>
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea.</p>
+      <p class="text3">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea.</p>
     </section>
   </main>
    
