--- a/дз7/7-index.html
+++ b/дз7/7-index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div class="wrapper">
-<p id="p1">
+<p>
     Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dolore cupiditate tempore
      distinctio alias totam enim expedita quia earum, officiis maiores consequatur repudiandae?
       Aliquid ratione ut quod facere odit asperiores? Nam mollitia velit porro facilis blanditiis
@@ -36,13 +36,13 @@ quam, commodi cupiditate.</p>
         sed omnis odio voluptatum, necessitatibus nesciunt laudantium beatae, quidem reprehenderit
         sapiente sint eos, corporis non quo repudiandae temporibus. Deserunt blanditiis dolorum perspiciatis
         quam, commodi cupiditate.</p>
-        <p class="p2">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dolore cupiditate tempore
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dolore cupiditate tempore
     distinctio alias totam enim expedita quia earum, officiis maiores consequatur repudiandae?
     Aliquid ratione ut quod facere odit asperiores? Nam mollitia velit porro facilis blanditiis
     sed omnis odio voluptatum, necessitatibus nesciunt laudantium beatae, quidem reprehenderit
     sapiente sint eos, corporis non quo repudiandae temporibus. Deserunt blanditiis dolorum perspiciatis
     quam, commodi cupiditate.</p>
-       <p class="p3">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dolore cupiditate tempore
+       <p id="p3">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dolore cupiditate tempore
     distinctio alias totam enim expedita quia earum, officiis maiores consequatur repudiandae?
     Aliquid ratione ut quod facere odit asperiores? Nam mollitia velit porro facilis blanditiis
     sed omnis odio voluptatum, necessitatibus nesciunt laudantium beatae, quidem reprehenderit
