--- a/дз3/3-index.html
+++ b/дз3/3-index.html
@@ -211,7 +211,7 @@
       </nav>
     </p>
 
-  <div class="instagram">
+  <div id="instagram">
     <a href="https://www.instagram.com/stavlirt/?igshid=YmMyMTA2M2Y%3D" target="_blank">
       <img src="https://pbs.twimg.com/profile_images/1526231349354303489/3Bg-2ZsT_400x400.jpg" 
       alt="Instagram"
