--- a/дз3/3-index.html
+++ b/дз3/3-index.html
@@ -39,7 +39,7 @@
     <section>
       <h2>Найпопулярніші жанри фільмів:</h2>
       
-        <h3>Хорор</h3>
+        <h3 class="h3">Хорор</h3>
         <p class="wrapper-p1">Такий жанр кіно популярний тому, що ми через екран можемо полоскотати собі нерви, підняти рівень адреналіну навіть
            не виходячи з кімнати. Але такі фільми не рекомендується дивитися всім, адже там присутні сцени та моменти, що
             дійсно можуть негативно вплинути на психіку людини, у якої вона слабка.
@@ -116,7 +116,7 @@
    
   <section>
    
-      <h3>Фантастика</h3>
+      <h3 class="h3">Фантастика</h3>
       <p class="wrapper-p3">Фантастика стала набагато популярнішою тоді, коли на ринок прийшли фільми всесвітів <span class="marvel">Marvel</span> та <span class="marvel">DC</span>,комікси
          яких ще до цього стали культовими. Дивлячись такі фільми завжди хочеться вірити в те, що у будь-якій 
          небезпечній ситуації нізвідки з’явиться фантастичний супергерой, та врятує нас, а потім увесь світ.</p>
@@ -153,7 +153,7 @@
   
   <section>
    
-      <h3>Детектив</h3>
+      <h3 class="h3">Детектив</h3>
       <p class="wrapper-p4">І закінчує наш рейтинг детектив, який протягом усього фільму втягує нас у ту нерозгадану загадку.
          Ми намагаємося помітити найменші дивні деталі та самостійно дати їм пояснення, висовуючи власні теорії.
           А найвидатнішим детективом кіно, й не тільки кіно, являється <span class="marvel">Шерлок Холмс</span></p>
