--- a/дз9/9-index.html
+++ b/дз9/9-index.html
@@ -10,21 +10,17 @@
 </head>
 <body>
     <div id="allbutton">
-<button class="button1"><span class="text1">Add</span></button>
-</br>
-</br>
+<button class="button1"><p class="text1">Add</p></button>
 
-    <button class="button2"><span class="text2">Buy now</span></button>
-</br>
-</br>
-    <button class="button3"><span class="text3">Click to see more ></span></button>
-</br>
-</br>
-</br>
-<button class="button4"><span class="text4">Delete</span></button>
-</br>
-</br>
-<button class="button5"><span class="text5">Buy now</span></button>
+
+
+    <button class="button2"><p class="text2">Buy now</p></button>
+
+    <button class="button3"><p class="text3">Click to see more ></p></button>
+
+<button class="button4"><p class="text4">Delete</p></button>
+
+<button class="button5"><p class="text5">Buy now</p></button>
 
 </div>
 </body>
