--- a/дз22/index.html
+++ b/дз22/index.html
@@ -11,5 +11,6 @@
 <body>
    <div class="task1-for-animation"></div>
    <button class="task2-for-animation">Click me</button>
+   <div class="quadrate"></div>
 </body>
 </html>
