--- a/дз22/index.html
+++ b/дз22/index.html
@@ -235,6 +235,148 @@
   <div class="quadrate33"></div>
   <div class="quadrate34"></div>
   </div>
+<div class="homework26-allblock">
+  <p class="homework-text">HW26</p>
 
+
+
+
+
+  
+    <button data-modal-open>Open modal window</button>
+    <div class="backdrop is-hidden" data-modal>
+  <div class="modal"><div class="teg-closewindow">
+    <button class="data-modal-closee" data-modal-close>
+      <img src="/homework/дз22/hw26-assets/close.png">
+    </button>
+    </div>
+<p class="h2text-for-hw26">Залиште свої дані, ми вам передзвонимо</p>
+<div class="allcontainer-for-xsacs">
+  <div>
+  <p class="texthw26-forinput">Ім'я</p>
+<form>
+  <div class="classforinputfoto1">
+  <input class="iwijwidj" type="text"/>
+  <div class="class-for-svgfoto-hw261">
+  <svg width="18" height="18" viewBox="0 0 18 18" fill="none" xmlns="http://www.w3.org/2000/svg">
+    <g clip-path="url(#clip0_60_11800)">
+    <path d="M9 9C10.6575 9 12 7.6575 12 6C12 4.3425 10.6575 3 9 3C7.3425 3 6 4.3425 6 6C6 7.6575 7.3425 9 9 9ZM9 10.5C6.9975 10.5 3 11.505 3 13.5V14.25C3 14.6625 3.3375 15 3.75 15H14.25C14.6625 15 15 14.6625 15 14.25V13.5C15 11.505 11.0025 10.5 9 10.5Z" fill="#212121"/>
+    </g>
+    <defs>
+    <clipPath id="clip0_60_11800">
+    <rect width="18" height="18" fill="white"/>
+    </clipPath>
+    </defs>
+    </svg>
+  </div>
+</div>
+</form>
+</div>
+<div class="spdpspsa">
+  <p class="texthw26-forinput">Телефон</p>
+<form>
+  <div class="classforinputfoto1">
+  <input class="iwijwidj" type="text"/>
+  <div class="class-for-svgfoto-hw261"><svg width="18" height="18" viewBox="0 0 18 18" fill="none" xmlns="http://www.w3.org/2000/svg">
+    <g clip-path="url(#clip0_60_11806)">
+    <path d="M13.996 11.1226L12.1579 10.9127C11.7164 10.8621 11.2822 11.0141 10.9711 11.3252L9.63948 12.6568C7.59147 11.6147 5.91254 9.94301 4.87044 7.88775L6.20925 6.54894C6.52043 6.23775 6.6724 5.80355 6.62174 5.3621L6.41188 3.53842C6.32504 2.8075 5.70991 2.2575 4.97176 2.2575H3.71979C2.90203 2.2575 2.22178 2.93776 2.27243 3.75552C2.65598 9.93577 7.59871 14.8713 13.7717 15.2548C14.5894 15.3055 15.2697 14.6252 15.2697 13.8075V12.5555C15.2769 11.8246 14.7269 11.2095 13.996 11.1226Z" fill="#212121"/>
+    </g>
+    <defs>
+    <clipPath id="clip0_60_11806">
+    <rect width="18" height="18" fill="white"/>
+    </clipPath>
+    </defs>
+    </svg></div>
+</div>
+</form>
+</div>
+<div class="spdpspsa">
+  <p class="texthw26-forinput">Пошта</p>
+<form>
+  <div class="classforinputfoto1">
+  <input class="iwijwidj" type="text"/>
+  <div class="class-for-svgfoto-hw261">
+    <svg width="18" height="18" viewBox="0 0 18 18" fill="none" xmlns="http://www.w3.org/2000/svg">
+    <g clip-path="url(#clip0_60_11812)">
+    <path d="M15 3H3C2.175 3 1.5075 3.675 1.5075 4.5L1.5 13.5C1.5 14.325 2.175 15 3 15H15C15.825 15 16.5 14.325 16.5 13.5V4.5C16.5 3.675 15.825 3 15 3ZM14.7 6.1875L9.3975 9.5025C9.1575 9.6525 8.8425 9.6525 8.6025 9.5025L3.3 6.1875C3.1125 6.0675 3 5.865 3 5.6475C3 5.145 3.5475 4.845 3.975 5.1075L9 8.25L14.025 5.1075C14.4525 4.845 15 5.145 15 5.6475C15 5.865 14.8875 6.0675 14.7 6.1875Z" fill="#212121"/>
+    </g>
+    <defs>
+    <clipPath id="clip0_60_11812">
+    <rect width="18" height="18" fill="white"/>
+    </clipPath>
+    </defs>
+    </svg></div>
+</div>
+</form>
+</div>
+<div class="spdpspsa">
+  <p class="texthw26-forinput">Коментар</p>
+  <form>
+    <textarea class="dlwpfkwp" rows="8">Введіть текст</textarea>
+  </form>
+</div>
+</div>
+
+<div>
+  <label class="container33"><div class="jekfjowe"><p class="pswldpa">Погоджуюся з розсилкою та приймаю</p><p class="pswldpa2"> Умови договору</p></div>
+    <input type="checkbox" checked="checked">
+    <span class="checkmark"></span>
+  </label>
+</div>
+<button class="dkfmke"><div class="dkfmkeds">Відправити</div></button>
+  </div>
+    </div>
+
+
+
+
+
+  <script>
+    (() => {
+
+const refs = {
+
+  openModalBtn: document.querySelector("[data-modal-open]"),
+
+  closeModalBtn: document.querySelector("[data-modal-close]"),
+
+  modal: document.querySelector("[data-modal]"),
+
+};
+
+
+
+refs.openModalBtn.addEventListener("click", toggleModal);
+
+refs.closeModalBtn.addEventListener("click", toggleModal);
+
+
+
+function toggleModal() {
+
+  refs.modal.classList.toggle("is-hidden");
+
+  document.body.classList.toggle("no-scroll");
+
+}
+
+})();
+  </script>
+<div class="sdkjwodjqwo">
+<div class="secondecontainer-forhw26">
+  <p class="textforsecondecontainer">Підпишіться на розсилку</p>
+  <forrm>
+    <div class="sldkqlwkd">
+    <input class="for-inputsecondecontainer" type="text" placeholder="E-mail">
+    <div class="sldlskwwsjsjs">
+  <button class="sdksolkdskow"><div class="sldkqoqoq"><div class="fortext-hw26secondecontainer">Підписатися</div><div class="sldklakdlq"><svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+    <path d="M24 0L0 13.5L7.66994 16.3407L19.5 5.25002L10.5017 17.3896L10.509 17.3923L10.5 17.3896V24.0001L14.8013 18.982L20.2501 21.0001L24 0Z" fill="white"/>
+    </svg></div></div></button></div>
+  </div>
+  </forrm>
+</div>
+</div>
+
+</div>
 </body>
-</html>
+</html>  
