--- a/дз22/index.html
+++ b/дз22/index.html
@@ -7,6 +7,7 @@
     <title>Document</title>
     <link rel="stylesheet" href="./main.css">
     <link rel="stylesheet" href="./reset.css">
+    <script src="./js/modal.js"></script>
 </head>
 <body>
     <p class="homework-text">HW22</p>
