--- a/дз27/index.html
+++ b/дз27/index.html
@@ -68,7 +68,7 @@
         <div class="allcontainer-hw27-sectione1">
             <div class="containerhw27-1-foto containerhw27-12-foto ">
                 <div class="pskcmsxmaao">
-                    <img class="foto-hoverhw27" src="/hw27-assets/img1.png">
+                    <img class="foto-hoverhw27" src="/дз27/hw27-assets/img1.png">
                     <div class="overlay">
                         <p class="text">Ресурс пропонує комплексні</br> пропозиції з різним рівнем</br> функціоналу та
                             сервісів. Все це</br> дозволить відвідувачу отримати</br> вичерпні відомості про
@@ -82,7 +82,7 @@
 
             <div class="containerhw27-1-foto containerhw27-13-foto">
                 <div class="pskcmsxmaao">
-                    <img src="/hw27-assets/img2.png">
+                    <img src="/дз27/hw27-assets/img2.png">
                     <div class="overlay">
                         <p class="text">Ресурс пропонує комплексні</br> пропозиції з різним рівнем</br> функціоналу та
                             сервісів. Все це</br> дозволить відвідувачу отримати</br> вичерпні відомості про
@@ -95,7 +95,7 @@
             </div>
             <div class="containerhw27-1-foto containerhw27-14-foto">
                 <div class="pskcmsxmaao">
-                    <img src="/hw27-assets/img3.png">
+                    <img src="/дз27/hw27-assets/img3.png">
                     <div class="overlay">
                         <p class="text">Ресурс пропонує комплексні</br> пропозиції з різним рівнем</br> функціоналу та
                             сервісів. Все це</br> дозволить відвідувачу отримати</br> вичерпні відомості про
@@ -109,7 +109,7 @@
         <div class="allcontainer-hw27-sectione1">
             <div class="containerhw27-1-foto containerhw27-12-foto">
                 <div class="pskcmsxmaao">
-                    <img src="/hw27-assets/img4.png">
+                    <img src="/дз27/hw27-assets/img4.png">
                     <div class="overlay">
                         <p class="text">Ресурс пропонує комплексні</br> пропозиції з різним рівнем</br> функціоналу та
                             сервісів. Все це</br> дозволить відвідувачу отримати</br> вичерпні відомості про
@@ -122,7 +122,7 @@
             </div>
             <div class="containerhw27-1-foto containerhw27-13-foto">
                 <div class="pskcmsxmaao">
-                    <img src="/hw27-assets/img5.png">
+                    <img src="/дз27/hw27-assets/img5.png">
                     <div class="overlay">
                         <p class="text">Ресурс пропонує комплексні</br> пропозиції з різним рівнем</br> функціоналу та
                             сервісів. Все це</br> дозволить відвідувачу отримати</br> вичерпні відомості про
@@ -135,7 +135,7 @@
             </div>
             <div class="containerhw27-1-foto containerhw27-14-foto">
                 <div class="pskcmsxmaao">
-                    <img src="/hw27-assets/img6.png">
+                    <img src="/дз27/hw27-assets/img6.png">
                     <div class="overlay">
                         <p class="text">Ресурс пропонує комплексні</br> пропозиції з різним рівнем</br> функціоналу та
                             сервісів. Все це</br> дозволить відвідувачу отримати</br> вичерпні відомості про
@@ -150,7 +150,7 @@
         <div class="allcontainer-hw27-sectione1">
             <div class="containerhw27-1-foto containerhw27-12-foto">
                 <div class="pskcmsxmaao">
-                    <img src="/hw27-assets/img7.png">
+                    <img src="/дз27/hw27-assets/img7.png">
                     <div class="overlay">
                         <p class="text">Ресурс пропонує комплексні</br> пропозиції з різним рівнем</br> функціоналу та
                             сервісів. Все це</br> дозволить відвідувачу отримати</br> вичерпні відомості про
@@ -163,7 +163,7 @@
             </div>
             <div class="containerhw27-1-foto containerhw27-13-foto">
                 <div class="pskcmsxmaao">
-                    <img src="/hw27-assets/img8.png">
+                    <img src="/дз27/hw27-assets/img8.png">
                     <div class="overlay">
                         <p class="text">Ресурс пропонує комплексні</br> пропозиції з різним рівнем</br> функціоналу та
                             сервісів. Все це</br> дозволить відвідувачу отримати</br> вичерпні відомості про
@@ -176,7 +176,7 @@
             </div>
             <div class="containerhw27-1-foto containerhw27-14-foto">
                 <div class="pskcmsxmaao">
-                    <img src="/hw27-assets/img9.png">
+                    <img src="/дз27/hw27-assets/img9.png">
                     <div class="overlay">
                         <p class="text">Ресурс пропонує комплексні</br> пропозиції з різним рівнем</br> функціоналу та
                             сервісів. Все це</br> дозволить відвідувачу отримати</br> вичерпні відомості про
