--- a/дз27/index.html
+++ b/дз27/index.html
@@ -64,23 +64,33 @@
         </div>
     </header>
 
-<section class="fordisplayflex">
-    <div>
-        <div class="box1-sectiondownheader"><p class="box1-text-sectiondownheader">Усі</p></div>
-    </div>
-    <div>
-        <div class="box2-sectiondownheader box-sectiondownheader"><p class="box1-text-sectiondownheader">Веб-сайти</p></div>
-    </div>
-    <div>
-        <div class="box3-sectiondownheader box-sectiondownheader"><p class="box1-text-sectiondownheader">Додатки</p></div>
-    </div>
-    <div>
-        <div class="box4-sectiondownheader box-sectiondownheader"><p class="box1-text-sectiondownheader">Дизайн</p></div>
-    </div>
-    <div>
-        <div class="box5-sectiondownheader box-sectiondownheader"><p class="box1-text-sectiondownheader">Маркетинг</p></div>
-    </div>
-</section>
+    <section class="fordisplayflex">
+        <div>
+            <div class="box1-sectiondownheader">
+                <p class="box1-text-sectiondownheader">Усі</p>
+            </div>
+        </div>
+        <div>
+            <div class="box2-sectiondownheader box-sectiondownheader">
+                <p class="box1-text-sectiondownheader">Веб-сайти</p>
+            </div>
+        </div>
+        <div>
+            <div class="box3-sectiondownheader box-sectiondownheader">
+                <p class="box1-text-sectiondownheader">Додатки</p>
+            </div>
+        </div>
+        <div>
+            <div class="box4-sectiondownheader box-sectiondownheader">
+                <p class="box1-text-sectiondownheader">Дизайн</p>
+            </div>
+        </div>
+        <div>
+            <div class="box5-sectiondownheader box-sectiondownheader">
+                <p class="box1-text-sectiondownheader">Маркетинг</p>
+            </div>
+        </div>
+    </section>
 
 
 
@@ -248,6 +258,7 @@
             }
         </script>
     </section>
+    <div></div>
 </body>
 
 </html>
